fixed the color contrast issue

--- a/styles/place.css
+++ b/styles/place.css
@@ -51,7 +51,7 @@ header {
 }
 
 .box {
-    background-color: rgba(255, 200, 87, 0.8);
+    background-color: rgba(31, 91, 111, 0.5);
     padding: 20px;
     border-radius: 12px;
     text-align: left;
